# src/core/media/http-router.js
@@ -1,6 +1,6 @@
-const {uploadMedia, downloadMedia} = require('./http-controller')
+const {uploadMedia, downloadMedia, deleteMedia} = require('./http-controller')
 const multer = require('multer')
-const upload = multer({dest:"uploads"})
+const upload = multer({dest: "uploads"})
 const security = require('helpers/security')
 
 
@@ -10,9 +10,11 @@ const security = require('helpers/security')
 module.exports = function (express) {
     const router = express.Router()
 
-    router.post('/media/:postId', security.authorization,  upload.single('fieldName'), uploadMedia)
+    router.post('/media/:postId', security.authorization, upload.single('fieldName'), uploadMedia)
 
-    router.get('/media/:gridFsId', downloadMedia)
+    router.get('/media/:gridFsId', security.authorization, downloadMedia)
+
+    router.delete('/media/:mediaId', security.authorization, deleteMedia)
 
     return router
 }
